# elite-ai-assisted-coding-hw

./: .gitignore  README.md  TECH_DEBT_ANALYSIS.md  TECH_DEBT_CHECKLIST.md  TECH_DEBT_INDEX.md  TECH_DEBT_SUMMARY.md  TECH_DEBT_VISUAL_GUIDE.md
.github/workflows/: codeql.yml
.windsurf/rules/: context.md  documentation.md  style-rules.md  testing.md
HW1/: ASSIGNMENT_OVERVIEW.md
HW1/demo/1. NoContext/app/: pyproject.toml
HW1/demo/2. Requirements/: plan.md
HW1/demo/2. Requirements/app/: pyproject.toml  story_builder.db
HW1/demo/3. BetterContext/: How-to install nodejs.md  README.md  bugs-discovered.md  plan.md  quality-plan.md  quality-todos.md  requirements-quality-brainstorming.md  requirements-quality.md  todos.md
HW1/demo/3. BetterContext/.ruler/: ruler.toml
HW1/demo/3. BetterContext/app/: .env.example  .gitignore  README-ANALYSIS.md  clear_icon.py  components.py  config.py  create_loading_icon.py  db.py  forms.py  gradio_test.py  hf_api.py  layouts.py  main.py  models.py  pyproject.toml  story_builder.db  styles.py  tech-debt-analysis.md
HW1/demo/3. BetterContext/app/tests/: conftest.py  test_api_mice.py  test_api_templates.py  test_api_try.py  test_db.py  test_edge_cases.py  test_setup.py
HW1/demo/3. BetterContext/context/: hf_gradioclient.md  hf_inference_flux.md  hf_inference_quickstart.md  hf_inferenceclient.md
HW1/incomplete/: README.md
HW2/: ASSIGNMENT.md  part2_homework.md
HW3/: ASSIGNMENT.md
app/: README.md
onboarding/: CLAUDE.md  main.py  pyproject.toml
onboarding/templates/: greeting.html  index.html
