[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "air[sql,standard]>=0.33.1",
    "sqlmodel>=0.0.25",
    "huggingface_hub>=0.20.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "gradio-client>=1.13.3",
]
